before indienen draft versie

--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -22,6 +22,7 @@ Een extra problematiek doet zich voor als de QR-code scanners niet optimaal func
 \label{sec:onderzoeksvraag}
 
 \subsection{Hoofdonderzoeksvragen}}
+\label{sec:Hoofdonderzoeksvragen}
 Zoals al aangegeven in sectie \ref{sec:probleemstelling} zal dit onderzoek zich vooral focussen op het vinden van betere en snellere oplossingen voor de problemen waarmee Lockit Rentals vandaag de dag mee kampt. Deze te onderzoeken feiten kunnen worden samengevoegd in één hoofdonderzoeksvraag.
 
 \begin{itemize}
