--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -69,7 +69,7 @@ Elke unit bevat 128 lockers verspreid over 4 kasten zoals te zien op figuur \ref
 
 \begin{figure}[h]
     \centering
-    \includegraphics[height=7cm]{F3_lockerUnit2.png}
+    \includegraphics[height=7cm]{F3_lockerUnit2.jpg}
     \captionsetup{justification=centering, singlelinecheck=false}    
     \caption{Een uitgetekende weergave van een locker unit.}
     \label{fig:lockerUnit2}
@@ -87,7 +87,7 @@ De fouttolerantie is doorslaggevend indien de QR-code gebruikt wordt als toegang
 
 \begin{figure}[h]
     \centering
-    \includegraphics{F4_voorstellingQrCode.png}
+    \includegraphics[width=0.8\textwidth]{F4_voorstellingQrCode.jpg}
     \captionsetup{justification=centering, singlelinecheck=false}    
     \caption{Een technische voorstelling van een QR-code.}
     \label{fig:voorstellingQR}
@@ -409,7 +409,7 @@ Om de QR-code te tonen op de mobiele applicatie hebben we componenten nodig om d
 
 \begin{figure}[h]
     \centering
-    \includegraphics{F6_qrcodeAdmin.png}
+    \includegraphics[width=0.35\textwidth]{F6_qrcodeAdmin.jpg}
     \captionsetup{justification=centering, singlelinecheck=false}    
     \caption{Een voorbeeld van een QR-code die gegeneerd is door een logistieke medewerker met de juiste bevoegdheden voor specifieke lockertoegang op een evenement.}
     \label{fig:qrCodeAdmin}
@@ -686,7 +686,7 @@ Om de problematiek van Lockit Rentals over de QR-code herkenning onder de loep t
 
 \begin{figure}[h]
     \centering
-    \includegraphics{F21_LockerUSBCamera.png}
+    \includegraphics[angle=-90, width=0.4\textwidth]{F21_LockerUSBCamera.jpeg}
     \captionsetup{justification=centering, singlelinecheck=false}
     \caption{De USB camera ingebouwd inclusief verlichting.}
     \label{fig:usbcameraLocker}
