--- a/bachproef/verwerkingresultaten.tex
+++ b/bachproef/verwerkingresultaten.tex
@@ -5,29 +5,27 @@
 \chapter{Verwerking resultaten}%
 \label{ch:verwerkingresultaten}
 
-Inleiding...
+In dit hoofdstuk zullen de resultaten van de experimenten aangehaald worden. De nieuwe ontwikkelde chatbot met al zijn vereiste functionaliteiten zal ook aan bod komen. Op basis van deze gegevens en uitvoeringstijden wordt er zo tot een correct antwoord gekomen op de hoofdonderzoeksvraag in sectie \ref{sec:Hoofdonderzoeksvragen}
 
 
 \section{Resultaten QR-code scanners}
-\label{resultatenQR-codeScanners}
+\label{sec:resultatenQR-codeScanners}
 
 Resultaten
 
 \begin{table}[h]
     \centering
-    \begin{tabular}{ |c|c| }
+    \begin{tabular}{ |c|c|c| }
         \hline
-        \multicolumn{1}{|c|}{} & \textbf{Nieuwe QR-scanner} \\       
+        \multicolumn{1}{|c|}{} & \textbf{Oude QR-camera} & \textbf{Nieuwe QR-scanner} \\       
         \hline
-        \textbf{\textit{Gemiddelde}} & 168,635 s \\
+        \textbf{\textit{Gemiddelde}} & 267,832s & 168,635s \\
         \hline
-        \textbf{\textit{Mediaan}} & 176,180 s \\
+        \textbf{\textit{Mediaan}} & 217,566s & 176,180s \\
+        \hline        
+        \textbf{\textit{Standaardafwijking}} & 132,079s & 28,778s \\
         \hline
-        \textbf{\textit{Modus}} & 177,737 s \\
-        \hline
-        \textbf{\textit{Standaardafwijking}} & 28,778 s \\
-        \hline
-        \textbf{\textit{Variantiecoëfficiënt}} & 0,018 s \\
+        \textbf{\textit{Variantiecoëfficiënt}} & 0,493 & 0,018 \\
         \hline
     \end{tabular}
     \captionsetup{justification=centering}
@@ -37,8 +35,35 @@ Resultaten
 
 
 \section{Resultaten chatbot}
-\label{resultatenChatbot}
+\label{sec:resultatenChatbot}
 
 Resultaten
+
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{graphics/F34_mailQR-code.jpg}
+    \captionsetup{justification=centering, singlelinecheck=false}
+    
+    \caption{Een verstuurde mail afkostig van Lockit Rentals met in bijlage de teruggewonnen QR-code.}
+    \label{fig:resultatEmailQR-code}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{graphics/F35_mailSender.png}
+        \captionsetup{justification=centering,singlelinecheck=false}
+    \caption{De tool 'Mail Sender' waarop we de verzonden mail kunnen traceren.}
+    \label{fig:resultaatEmailSender}
+\end{figure}
+
+
+
+
+
+
+
+
+
 
 
