add samenvatting opzet update hoofdvragen + add verwerking resultaten qr-code

--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -34,13 +34,14 @@ Zoals al aangegeven in sectie \ref{sec:probleemstelling} zal dit onderzoek zich 
 Om de hoofdonderzoeksvraag verder op te splitsen, kunnen we ook nog enkele deelvragen stellen.
 
 \begin{itemize}
-    \item Welke gebruikte technieken kunnen we optimaliseren om zo de doelstelling te behalen?
-    \item Hoe zijn deze hedendaagse technieken gebruikt binnen de bedrijfsactiviteiten?
+    \item Welke gebruikte technieken kan de scanbaarheid en de nauwkeurigheid van toegangscodes verhogen om de onbemande uitbatingen positief te beïnvloeden?
+    \item Hoe kunnen we op een eenvoudige maar gebruiksvriendelijke manier QR-codes laten genereren zonder gebruik te maken van logistiek personeel?
 \end{itemize}
 
 %TODO: geef extra vragen
 
 Op deze vragen wordt doorheen het onderzoek een duidelijk antwoord aangeboden. De volledige antwoorden op de gestelde onderzoeksvragen zijn te vinden in de conclusie \ref{ch:conclusie}.
+\newpage
 
 
 \section{\IfLanguageName{dutch}{Onderzoeksdoelstelling}{Research objective}}%
@@ -48,7 +49,6 @@ Op deze vragen wordt doorheen het onderzoek een duidelijk antwoord aangeboden. D
 Het beoogd resultaat zal kunnen aantonen dat deze bachelorproef betere inzichten heeft verworpen voor het bedrijf Lockit Rentals. Uiteraard geeft het hoofdstuk verwerking van resultaten \ref{ch:verwerkingresultaten} geen garanties op de bedrijfsactiviteiten, het zijn wel factoren waar het bedrijf rekening mee kan houden in de toekomst om deze te optimaliseren.
 
 Kortom, het digitaliseren van lockers kan bijdragen aan een efficiëntere, veiligere en meer klantvriendelijke ervaringen voor festivalgangers. In het onderzoek zullen er voor beide problemen Proof-of-Concepten opgesteld worden. De combinatie tussen een hardware opstelling en een software uitwerking kan aantonen dat er efficiëntere en snellere manieren zijn om een locker te openen met behulp van een QR-code. Hieruit zullen experimenten uit voortvloeien waaruit conclusies getrokken worden. Een tweede Proof-Of-Concept heeft verband met de ontwikkeling van een online automatische chatbot die het takenpakket van de logistieke medewerkers overneemt. De uitwerking zal voortvloeien in een prototype dat operationeel en geïntegreerd zal zijn in de applicatie van Lockit Rentals. Beide ontwikkelingen zullen moeten voldoen aan een vooraf opgestelde criteria analyse die in handen ligt van het bedrijf. 
-\newpage
 
 
 \section{\IfLanguageName{dutch}{Opzet van deze bachelorproef}{Structure of this bachelor thesis}}%
@@ -57,14 +57,15 @@ Kortom, het digitaliseren van lockers kan bijdragen aan een efficiëntere, veili
 % Het is gebruikelijk aan het einde van de inleiding een overzicht te
 % geven van de opbouw van de rest van de tekst. Deze sectie bevat al een aanzet
 % die je kan aanvullen/aanpassen in functie van je eigen tekst.
-\begin{comment}
-    De rest van deze bachelorproef is als volgt opgebouwd:
-    
-    In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand van zaken binnen het onderzoeksdomein, op basis van een literatuurstudie.
-    
-    In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen.
-    
-    % TODO: Vul hier aan voor je eigen hoofstukken, één of twee zinnen per hoofdstuk
-    
-    In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt ook een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
-\end{comment}
+De rest van deze bachelorproef is als volgt opgebouwd:
+
+In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand van zaken binnen het onderzoeksdomein, op basis van een literatuurstudie.
+
+In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen.
+
+In hoofdstuk \ref{ch:Proof-Of-Concept} wordt toegelichte welke oplossingen gerealiseerd en getest werden in dit onderzoek.
+
+In hoofdstuk \ref{ch:verwerkingresultaten} vindt u de volledige verwerking van alle bekomen experimenten en testen.
+
+In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt ook een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
+
