--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -15,7 +15,7 @@
 %
 % Daarom bestaat een abstract uit volgende componenten:
 %
-% - inleiding + kaderen thema
+% - inleiding + kaderen thema done
 % - probleemstelling
 % - (centrale) onderzoeksvraag
 % - onderzoeksdoelstelling
@@ -35,9 +35,11 @@
 \selectlanguage{english}
 }{}
 
+
+
 %%---------- Samenvatting -----------------------------------------------------
 % De samenvatting in de hoofdtaal van het document
 
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
 
-\lipsum[1-4]
+Moderne technologieën zijn niet meer weg te denken in onze dagdagelijkse samenleving. Wanneer mensen aanwezig zijn op evenementen of festivals willen ze deze elementen ook aanvoelen en hanteren voor algemeen gebruiksgemak. Lockit Rentals heeft daarvoor nieuwe smart locker systemen opgebouwd om festivalgangers de gelegenheid te geven hun persoonlijke bezittingen veilig en eenvoudig op te bergen. De onveranderlijke omgevingen   waarin toegangscodes gescand worden kan zeer hard beïnvloed worden door allerlei factoren. Daarom zal onderzoek toont dat het scannen van toegangscodes in vorm van QR-codes de specialiseerde QR-code scanners meer geschikt zijn in plaats van de hedendaags gebruikte camera’s. De positieve elementen komen pas echt naar voor in de meer extremere omgevingen zoals heel veel licht of beschadigde QR-codes. De garantie dat de koper de toegangscode in een perfecte staat bewaren, is beperkt. Om dit risico te vermijden is Lockit Rentals verplicht om tijdens de volledige tijdsduur van een festival logistieke medewerkers te voorzien om de QR-code opnieuw te genereren. Uit bijkomstig onderzoek en opgestelde eisen van het bestuur van het locker bedrijf zal aangeven dat een geautomatiseerde chatbot deze logistieke medewerkers te vervangen. De chatbot kan de huurder zowel technische als informatieve hulp aanbieden. Dit onderzoek kan verder uitgewerkt worden in een statistisch onderzoek bij het implementeren van gegeven conclusies.
